2009-10-16 [holger]	0.23cvs1

	* Makefile.am
	* configure.ac
	* gtkhotkey/.cvsignore
	* gtkhotkey/Makefile.am
	* gtkhotkey/gtk-hotkey-error.c
	* gtkhotkey/gtk-hotkey-error.h
	* gtkhotkey/gtk-hotkey-info.c
	* gtkhotkey/gtk-hotkey-info.h
	* gtkhotkey/gtk-hotkey-key-file-registry.c
	* gtkhotkey/gtk-hotkey-key-file-registry.h
	* gtkhotkey/gtk-hotkey-listener.c
	* gtkhotkey/gtk-hotkey-listener.h
	* gtkhotkey/gtk-hotkey-marshal.c
	* gtkhotkey/gtk-hotkey-marshal.h
	* gtkhotkey/gtk-hotkey-registry.c
	* gtkhotkey/gtk-hotkey-registry.h
	* gtkhotkey/gtk-hotkey-utils.c
	* gtkhotkey/gtk-hotkey-utils.h
	* gtkhotkey/gtk-hotkey-x11-listener.c
	* gtkhotkey/gtk-hotkey-x11-listener.h
	* gtkhotkey/gtkhotkey.h
	* gtkhotkey/x11/.cvsignore
	* gtkhotkey/x11/eggaccelerators.c
	* gtkhotkey/x11/eggaccelerators.h
	* gtkhotkey/x11/tomboykeybinder.c
	* gtkhotkey/x11/tomboykeybinder.h
	* src/Makefile.am
	* src/notification_prefs.c
	* src/notification_prefs.h
	* src/notification_trayicon.c
	* src/notification_trayicon.h
		Add support for global hotkeys to the trayicon
		module. Ships a local copy of libgtkhotkey.
		The hotkey support can be disabled at compile
		time with the new --disable-hotkeys configure switch.

2009-10-09 [paul]	0.23

	0.23 released

2009-08-22 [holger]	0.22cvs4

	* m4/.cvsignore
		More files to ignore
	* src/notification_prefs.c
		Increase maximum popup time to an hour,
		and allow popups that never time out when
		using libnotify

2009-07-10 [colin]	0.22cvs3

	* src/claws.def
	* src/notification_trayicon.c
		Fix Windows build

2009-07-10 [holger]	0.22cvs2

	* src/notification_plugin.c
		Return FALSE from plugin_done() to avoid crash on unload
		due to needed libraries.

2009-07-03 [mones]	0.22cvs1

	* configure.ac
	* po/es.po
		Added Spanish translation

2009-07-03 [paul]	0.22

	0.22 released

2009-07-03 [paul]	0.21cvs10

	* configure.ac
	* po/id.po
		added by MSulchan Darmawan
	* po/cs.po
	* po/fi.po
	* po/fr.po
	* po/hu.po
	* po/it.po
	* po/ja.po
	* po/pt_BR.po