@@ -132,3 +132,4 @@
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/claws.def;  cvs diff -u -r 1.1.2.24 -r 1.1.2.25 src/notification_trayicon.c;  ) > 0.22cvs3.patchset
 ( cvs diff -u -r 1.1.2.1 -r 1.1.2.2 m4/.cvsignore;  cvs diff -u -r 1.1.2.31 -r 1.1.2.32 src/notification_prefs.c;  ) > 0.22cvs4.patchset
 ( cvs diff -u -r 1.1.2.4 -r 1.1.2.5 Makefile.am;  cvs diff -u -r 1.1.2.172 -r 1.1.2.173 configure.ac;  diff -u /dev/null gtkhotkey/.cvsignore;  diff -u /dev/null gtkhotkey/Makefile.am;  diff -u /dev/null gtkhotkey/gtk-hotkey-error.c;  diff -u /dev/null gtkhotkey/gtk-hotkey-error.h;  diff -u /dev/null gtkhotkey/gtk-hotkey-info.c;  diff -u /dev/null gtkhotkey/gtk-hotkey-info.h;  diff -u /dev/null gtkhotkey/gtk-hotkey-key-file-registry.c;  diff -u /dev/null gtkhotkey/gtk-hotkey-key-file-registry.h;  diff -u /dev/null gtkhotkey/gtk-hotkey-listener.c;  diff -u /dev/null gtkhotkey/gtk-hotkey-listener.h;  diff -u /dev/null gtkhotkey/gtk-hotkey-marshal.c;  diff -u /dev/null gtkhotkey/gtk-hotkey-marshal.h;  diff -u /dev/null gtkhotkey/gtk-hotkey-registry.c;  diff -u /dev/null gtkhotkey/gtk-hotkey-registry.h;  diff -u /dev/null gtkhotkey/gtk-hotkey-utils.c;  diff -u /dev/null gtkhotkey/gtk-hotkey-utils.h;  diff -u /dev/null gtkhotkey/gtk-hotkey-x11-listener.c;  diff -u /dev/null gtkhotkey/gtk-hotkey-x11-listener.h;  diff -u /dev/null gtkhotkey/gtkhotkey.h;  diff -u /dev/null gtkhotkey/x11/.cvsignore;  diff -u /dev/null gtkhotkey/x11/eggaccelerators.c;  diff -u /dev/null gtkhotkey/x11/eggaccelerators.h;  diff -u /dev/null gtkhotkey/x11/tomboykeybinder.c;  diff -u /dev/null gtkhotkey/x11/tomboykeybinder.h;  cvs diff -u -r 1.1.2.11 -r 1.1.2.12 src/Makefile.am;  cvs diff -u -r 1.1.2.32 -r 1.1.2.33 src/notification_prefs.c;  cvs diff -u -r 1.1.2.19 -r 1.1.2.20 src/notification_prefs.h;  cvs diff -u -r 1.1.2.25 -r 1.1.2.26 src/notification_trayicon.c;  cvs diff -u -r 1.1.2.6 -r 1.1.2.7 src/notification_trayicon.h;  ) > 0.23cvs1.patchset
+( cvs diff -u -r 1.1.2.33 -r 1.1.2.34 src/notification_prefs.c;  ) > 0.23cvs2.patchset
